--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "aggiemap",
+  "name": "aggie-visualizations",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.X.X",
+    "Sentimental": "^1.0.1",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "express": "~4.X.X",
     "jade": "~1.6.0",
-    "mongodb" : "~2.0.2",
-    "monk" : "~0.9.0"
+    "mongodb": "~2.0.2",
+    "monk": "~0.9.0",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3"
   }
 }
