--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
+    "ejs": "^1.0.0",
     "express": "~4.X.X",
     "jade": "~1.6.0",
     "mongodb": "~2.0.2",
